Rectifier ile birlikte modelleme çalışmalarına başlandı. DC bus modeli üzerinde çalışılıyor.

--- a/.gitignore
+++ b/.gitignore
@@ -651,3 +651,120 @@ Simulation/slprj/accel/balancing_sim_model_induced_voltage/defines.txt
 Simulation/slprj/accel/balancing_sim_model_induced_voltage/codedescriptor.dmr
 Simulation/slprj/accel/balancing_sim_model_induced_voltage/balancing_sim_model_induced_voltage_ref.rsp
 Prototype/Test/test diaries/2019.08.03/~$19.08.03 - Test Günlüğü - Series.docx
+Simulation/balancing/Rectifier_sim_model_acc.mexw64
+Simulation/balancing/Rectifier_sim_model_acc.lib
+Simulation/balancing/Rectifier_sim_model_acc.exp
+Simulation/balancing/slprj/accel/Rectifier_sim_model/rtGetNaN.c
+Simulation/balancing/slprj/accel/Rectifier_sim_model/rtGetInf.obj
+Simulation/balancing/slprj/accel/Rectifier_sim_model/rtGetInf.h
+Simulation/balancing/slprj/accel/Rectifier_sim_model/rtGetInf.c
+Simulation/balancing/slprj/accel/Rectifier_sim_model/multiword_types.h
+Simulation/balancing/slprj/accel/Rectifier_sim_model/modelsources.txt
+Simulation/balancing/slprj/accel/Rectifier_sim_model/lccstub.obj
+Simulation/balancing/slprj/accel/Rectifier_sim_model/defines.txt
+Simulation/balancing/slprj/accel/Rectifier_sim_model/codedescriptor.dmr
+Simulation/balancing/slprj/accel/Rectifier_sim_model/__cf_Rectifier_sim_model.h
+Simulation/balancing/slprj/accel/Rectifier_sim_model/Rectifier_sim_model_ref.rsp
+Simulation/balancing/slprj/accel/Rectifier_sim_model/Rectifier_sim_model_acc_types.h
+Simulation/balancing/slprj/accel/Rectifier_sim_model/Rectifier_sim_model_acc_private.h
+Simulation/balancing/slprj/accel/Rectifier_sim_model/Rectifier_sim_model_acc_data.obj
+Simulation/balancing/slprj/accel/Rectifier_sim_model/Rectifier_sim_model_acc_data.c
+Simulation/balancing/slprj/accel/Rectifier_sim_model/Rectifier_sim_model_acc.obj
+Simulation/balancing/slprj/modeladvisor/balancing__sim__model__RL__load__Rectifier__added/vandvback.png
+Simulation/balancing/slprj/modeladvisor/balancing__sim__model__RL__load__Rectifier__added/vandv.png
+Simulation/balancing/slprj/modeladvisor/balancing__sim__model__RL__load__Rectifier__added/task_warning_h.png
+Simulation/balancing/slprj/modeladvisor/balancing__sim__model__RL__load__Rectifier__added/task_warning.png
+Simulation/balancing/slprj/modeladvisor/balancing__sim__model__RL__load__Rectifier__added/task_req_passed.png
+Simulation/balancing/slprj/modeladvisor/balancing__sim__model__RL__load__Rectifier__added/task_req_forcepassed.png
+Simulation/balancing/slprj/modeladvisor/balancing__sim__model__RL__load__Rectifier__added/task_passed.png
+Simulation/balancing/slprj/modeladvisor/balancing__sim__model__RL__load__Rectifier__added/task_forcepass.png
+Simulation/balancing/slprj/modeladvisor/balancing__sim__model__RL__load__Rectifier__added/task_failed_h.png
+Simulation/balancing/slprj/modeladvisor/balancing__sim__model__RL__load__Rectifier__added/task_failed.png
+Simulation/balancing/slprj/modeladvisor/balancing__sim__model__RL__load__Rectifier__added/task_disabled.png
+Simulation/balancing/slprj/modeladvisor/balancing__sim__model__RL__load__Rectifier__added/procedure_warning.png
+Simulation/balancing/slprj/modeladvisor/balancing__sim__model__RL__load__Rectifier__added/procedure_passed.png
+Simulation/balancing/slprj/modeladvisor/balancing__sim__model__RL__load__Rectifier__added/procedure_failed.png
+Simulation/balancing/slprj/modeladvisor/balancing__sim__model__RL__load__Rectifier__added/plus.png
+Simulation/balancing/slprj/modeladvisor/balancing__sim__model__RL__load__Rectifier__added/minus.png
+Simulation/balancing/slprj/modeladvisor/balancing__sim__model__RL__load__Rectifier__added/info_icon.png
+Simulation/balancing/slprj/modeladvisor/balancing__sim__model__RL__load__Rectifier__added/icon_task_required.png
+Simulation/balancing/slprj/modeladvisor/balancing__sim__model__RL__load__Rectifier__added/icon_task_pselected.png
+Simulation/balancing/slprj/modeladvisor/balancing__sim__model__RL__load__Rectifier__added/icon_task_disabled.png
+Simulation/balancing/slprj/modeladvisor/balancing__sim__model__RL__load__Rectifier__added/icon_task.png
+Simulation/balancing/slprj/modeladvisor/balancing__sim__model__RL__load__Rectifier__added/icon_procedure.png
+Simulation/balancing/slprj/modeladvisor/balancing__sim__model__RL__load__Rectifier__added/icon_folder.png
+Simulation/balancing/slprj/modeladvisor/balancing__sim__model__RL__load__Rectifier__added/folder_warning.png
+Simulation/balancing/slprj/modeladvisor/balancing__sim__model__RL__load__Rectifier__added/folder_pass.png
+Simulation/balancing/slprj/modeladvisor/balancing__sim__model__RL__load__Rectifier__added/folder_failed.png
+Simulation/balancing/slprj/modeladvisor/balancing__sim__model__RL__load__Rectifier__added/folder.png
+Simulation/balancing/slprj/modeladvisor/balancing__sim__model__RL__load__Rectifier__added/ModelAdvisorData
+Simulation/balancing/slprj/modeladvisor/balancing__sim__model__RL__load/vandvback.png
+Simulation/balancing/slprj/modeladvisor/balancing__sim__model__RL__load/vandv.png
+Simulation/balancing/slprj/modeladvisor/balancing__sim__model__RL__load/task_warning_h.png
+Simulation/balancing/slprj/modeladvisor/balancing__sim__model__RL__load/task_warning.png
+Simulation/balancing/slprj/modeladvisor/balancing__sim__model__RL__load/task_req_passed.png
+Simulation/balancing/slprj/modeladvisor/balancing__sim__model__RL__load/task_req_forcepassed.png
+Simulation/balancing/slprj/modeladvisor/balancing__sim__model__RL__load/task_passed.png
+Simulation/balancing/slprj/modeladvisor/balancing__sim__model__RL__load/task_forcepass.png
+Simulation/balancing/slprj/modeladvisor/balancing__sim__model__RL__load/task_failed_h.png
+Simulation/balancing/slprj/modeladvisor/balancing__sim__model__RL__load/task_failed.png
+Simulation/balancing/slprj/modeladvisor/balancing__sim__model__RL__load/task_disabled.png
+Simulation/balancing/slprj/modeladvisor/balancing__sim__model__RL__load/procedure_warning.png
+Simulation/balancing/slprj/modeladvisor/balancing__sim__model__RL__load/procedure_passed.png
+Simulation/balancing/slprj/modeladvisor/balancing__sim__model__RL__load/procedure_failed.png
+Simulation/balancing/slprj/modeladvisor/balancing__sim__model__RL__load/plus.png
+Simulation/balancing/slprj/modeladvisor/balancing__sim__model__RL__load/minus.png
+Simulation/balancing/slprj/modeladvisor/balancing__sim__model__RL__load/info_icon.png
+Simulation/balancing/slprj/modeladvisor/balancing__sim__model__RL__load/icon_task_required.png
+Simulation/balancing/slprj/modeladvisor/balancing__sim__model__RL__load/icon_task_pselected.png
+Simulation/balancing/slprj/modeladvisor/balancing__sim__model__RL__load/icon_task_disabled.png
+Simulation/balancing/slprj/modeladvisor/balancing__sim__model__RL__load/icon_task.png
+Simulation/balancing/slprj/modeladvisor/balancing__sim__model__RL__load/icon_procedure.png
+Simulation/balancing/slprj/modeladvisor/balancing__sim__model__RL__load/icon_folder.png
+Simulation/balancing/slprj/modeladvisor/balancing__sim__model__RL__load/folder_warning.png
+Simulation/balancing/slprj/modeladvisor/balancing__sim__model__RL__load/folder_pass.png
+Simulation/balancing/slprj/modeladvisor/balancing__sim__model__RL__load/folder_failed.png
+Simulation/balancing/slprj/modeladvisor/balancing__sim__model__RL__load/folder.png
+Simulation/balancing/slprj/modeladvisor/balancing__sim__model__RL__load/ModelAdvisorData
+Simulation/balancing/slprj/modeladvisor/Rectifier__sim__model/vandvback.png
+Simulation/balancing/slprj/modeladvisor/Rectifier__sim__model/vandv.png
+Simulation/balancing/slprj/modeladvisor/Rectifier__sim__model/task_warning_h.png
+Simulation/balancing/slprj/modeladvisor/Rectifier__sim__model/task_warning.png
+Simulation/balancing/slprj/modeladvisor/Rectifier__sim__model/task_req_passed.png
+Simulation/balancing/slprj/modeladvisor/Rectifier__sim__model/task_req_forcepassed.png
+Simulation/balancing/slprj/modeladvisor/Rectifier__sim__model/task_passed.png
+Simulation/balancing/slprj/modeladvisor/Rectifier__sim__model/task_forcepass.png
+Simulation/balancing/slprj/modeladvisor/Rectifier__sim__model/task_failed_h.png
+Simulation/balancing/slprj/modeladvisor/Rectifier__sim__model/task_failed.png
+Simulation/balancing/slprj/modeladvisor/Rectifier__sim__model/task_disabled.png
+Simulation/balancing/slprj/modeladvisor/Rectifier__sim__model/procedure_warning.png
+Simulation/balancing/slprj/modeladvisor/Rectifier__sim__model/procedure_passed.png
+Simulation/balancing/slprj/modeladvisor/Rectifier__sim__model/procedure_failed.png
+Simulation/balancing/slprj/modeladvisor/Rectifier__sim__model/plus.png
+Simulation/balancing/slprj/modeladvisor/Rectifier__sim__model/minus.png
+Simulation/balancing/slprj/modeladvisor/Rectifier__sim__model/info_icon.png
+Simulation/balancing/slprj/modeladvisor/Rectifier__sim__model/icon_task_required.png
+Simulation/balancing/slprj/modeladvisor/Rectifier__sim__model/icon_task_pselected.png
+Simulation/balancing/slprj/modeladvisor/Rectifier__sim__model/icon_task_disabled.png
+Simulation/balancing/slprj/modeladvisor/Rectifier__sim__model/icon_task.png
+Simulation/balancing/slprj/modeladvisor/Rectifier__sim__model/icon_procedure.png
+Simulation/balancing/slprj/modeladvisor/Rectifier__sim__model/icon_folder.png
+Simulation/balancing/slprj/modeladvisor/Rectifier__sim__model/folder_warning.png
+Simulation/balancing/slprj/modeladvisor/Rectifier__sim__model/folder_pass.png
+Simulation/balancing/slprj/modeladvisor/Rectifier__sim__model/folder_failed.png
+Simulation/balancing/slprj/modeladvisor/Rectifier__sim__model/folder.png
+Simulation/balancing/slprj/modeladvisor/Rectifier__sim__model/ModelAdvisorData
+Simulation/balancing/slprj/accel/Rectifier_sim_model/sfun.map
+Simulation/balancing/slprj/accel/Rectifier_sim_model/rtwtypes.h
+Simulation/balancing/slprj/accel/Rectifier_sim_model/rtw_proj.tmw
+Simulation/balancing/slprj/accel/Rectifier_sim_model/rt_nonfinite.obj
+Simulation/balancing/slprj/accel/Rectifier_sim_model/rt_nonfinite.h
+Simulation/balancing/slprj/accel/Rectifier_sim_model/rt_nonfinite.c
+Simulation/balancing/slprj/accel/Rectifier_sim_model/rt_defines.h
+Simulation/balancing/slprj/accel/Rectifier_sim_model/rtGetNaN.obj
+Simulation/balancing/slprj/accel/Rectifier_sim_model/rtGetNaN.h
+Simulation/balancing/slprj/accel/Rectifier_sim_model/Rectifier_sim_model_acc.h
+Simulation/balancing/slprj/accel/Rectifier_sim_model/Rectifier_sim_model_acc.def
+Simulation/balancing/slprj/accel/Rectifier_sim_model/Rectifier_sim_model_acc.c
+Simulation/balancing/slprj/accel/Rectifier_sim_model/Rectifier_sim_model.mk
+Simulation/balancing/slprj/accel/Rectifier_sim_model/Rectifier_sim_model.bat
