Kontrol kartı dengesizlik simülasyon çalışmaları başlangıç.

--- a/.gitignore
+++ b/.gitignore
@@ -768,3 +768,29 @@ Simulation/balancing/slprj/accel/Rectifier_sim_model/Rectifier_sim_model_acc.def
 Simulation/balancing/slprj/accel/Rectifier_sim_model/Rectifier_sim_model_acc.c
 Simulation/balancing/slprj/accel/Rectifier_sim_model/Rectifier_sim_model.mk
 Simulation/balancing/slprj/accel/Rectifier_sim_model/Rectifier_sim_model.bat
+Simulation/balancing/slprj/accel/kontrol_karti_balance/rt_nonfinite.c
+Simulation/balancing/slprj/accel/kontrol_karti_balance/codedescriptor.dmr
+Simulation/balancing/slprj/accel/kontrol_karti_balance/__cf_kontrol_karti_balance.h
+Simulation/balancing/kontrol_karti_balance_acc.mexw64
+Simulation/balancing/slprj/accel/kontrol_karti_balance/rtwtypes.h
+Simulation/balancing/slprj/accel/kontrol_karti_balance/rtw_proj.tmw
+Simulation/balancing/slprj/accel/kontrol_karti_balance/rt_nonfinite.h
+Simulation/balancing/slprj/accel/kontrol_karti_balance/kontrol_karti_balance.mk
+Simulation/balancing/slprj/accel/kontrol_karti_balance/kontrol_karti_balance.bat
+Simulation/balancing/slprj/accel/kontrol_karti_balance/defines.txt
+Simulation/balancing/slprj/accel/kontrol_karti_balance/rtGetNaN.c
+Simulation/balancing/slprj/accel/kontrol_karti_balance/rtGetInf.h
+Simulation/balancing/kontrol_karti_balance_acc.exp
+Simulation/balancing/slprj/accel/kontrol_karti_balance/sfun.map
+Simulation/balancing/slprj/accel/kontrol_karti_balance/kontrol_karti_balance_acc.h
+Simulation/balancing/slprj/accel/kontrol_karti_balance/kontrol_karti_balance_acc.def
+Simulation/balancing/slprj/accel/kontrol_karti_balance/kontrol_karti_balance_acc.c
+Simulation/balancing/slprj/accel/kontrol_karti_balance/kontrol_karti_balance_acc_types.h
+Simulation/balancing/slprj/accel/kontrol_karti_balance/kontrol_karti_balance_acc_private.h
+Simulation/balancing/slprj/accel/kontrol_karti_balance/kontrol_karti_balance_acc_data.c
+Simulation/balancing/slprj/accel/kontrol_karti_balance/multiword_types.h
+Simulation/balancing/slprj/accel/kontrol_karti_balance/modelsources.txt
+Simulation/balancing/slprj/accel/kontrol_karti_balance/kontrol_karti_balance_ref.rsp
+Simulation/balancing/slprj/accel/kontrol_karti_balance/rt_defines.h
+Simulation/balancing/slprj/accel/kontrol_karti_balance/rtGetNaN.h
+Simulation/balancing/slprj/accel/kontrol_karti_balance/rtGetInf.c
