V/f frekans geçişlerindeki problem çözüldü. A fazı modülasyon sinyalinin sıfır geçişi dikkate alınarak frekans, ma güncellendi ve zaman sinyali resetlendi. B ve C fazında ise aynı event anı kullanılarak ve 2pi/3 faz konarak görece smooth geçiş sağlandı. 1500rpmde başlama sorunu hala mysterious.

--- a/.gitignore
+++ b/.gitignore
@@ -824,3 +824,37 @@ Simulation/control/slprj/accel/vbyfcontrolim/vbyfcontrolim_acc_types.h
 Simulation/control/slprj/accel/vbyfcontrolim/vbyfcontrolim_acc_private.h
 Simulation/control/vbyfcontrolim_acc.mexw64
 Simulation/control/vbyfcontrolim_acc.exp
+Simulation/control/slprj/accel/vbyfcontrolim_trials/vbyfcontrolim_trials_ref.rsp
+Simulation/control/slprj/accel/vbyfcontrolim_trials/vbyfcontrolim_trials_acc_types.h
+Simulation/control/slprj/accel/vbyfcontrolim_trials/vbyfcontrolim_trials_acc_private.h
+Simulation/control/slprj/accel/vbyfcontrolim_trials/vbyfcontrolim_trials_acc_data.c
+Simulation/control/slprj/accel/vbyfcontrolim_trials/vbyfcontrolim_trials_acc.h
+Simulation/control/slprj/accel/vbyfcontrolim_trials/vbyfcontrolim_trials_acc.def
+Simulation/control/slprj/accel/vbyfcontrolim_trials/vbyfcontrolim_trials_acc.c
+Simulation/control/slprj/accel/vbyfcontrolim_trials/vbyfcontrolim_trials.mk
+Simulation/control/slprj/accel/vbyfcontrolim_trials/vbyfcontrolim_trials.bat
+Simulation/control/slprj/accel/vbyfcontrolim_trials/sfun.map
+Simulation/control/slprj/accel/vbyfcontrolim_trials/rtwtypes.h
+Simulation/control/slprj/accel/vbyfcontrolim_trials/rtw_proj.tmw
+Simulation/control/slprj/accel/vbyfcontrolim_trials/rt_zcfcn.h
+Simulation/control/slprj/accel/vbyfcontrolim_trials/rt_zcfcn.c
+Simulation/control/slprj/accel/vbyfcontrolim_trials/rt_nonfinite.h
+Simulation/control/slprj/accel/vbyfcontrolim_trials/rt_nonfinite.c
+Simulation/control/slprj/accel/vbyfcontrolim_trials/rt_look1d.h
+Simulation/control/slprj/accel/vbyfcontrolim_trials/rt_look1d.c
+Simulation/control/slprj/accel/vbyfcontrolim_trials/rt_look.h
+Simulation/control/slprj/accel/vbyfcontrolim_trials/rt_look.c
+Simulation/control/slprj/accel/vbyfcontrolim_trials/rt_defines.h
+Simulation/control/slprj/accel/vbyfcontrolim_trials/rtGetNaN.h
+Simulation/control/slprj/accel/vbyfcontrolim_trials/rtGetNaN.c
+Simulation/control/slprj/accel/vbyfcontrolim_trials/rtGetInf.h
+Simulation/control/slprj/accel/vbyfcontrolim_trials/rtGetInf.c
+Simulation/control/slprj/accel/vbyfcontrolim_trials/multiword_types.h
+Simulation/control/slprj/accel/vbyfcontrolim_trials/modelsources.txt
+Simulation/control/slprj/accel/vbyfcontrolim_trials/defines.txt
+Simulation/control/slprj/accel/vbyfcontrolim_trials/codedescriptor.dmr
+Simulation/control/slprj/accel/vbyfcontrolim_trials/__cf_vbyfcontrolim_trials.h
+Simulation/control/slprj/_jitprj/stLPesVfQ2phtalhelUdwgE.l
+Simulation/control/slprj/_jitprj/skSVTyhuSaiuumEl0G5VsBH.l
+Simulation/control/vbyfcontrolim_trials_acc.mexw64
+Simulation/control/vbyfcontrolim_trials_acc.exp
