Simulinkte DSP simülatörü kullanılarak V/f operasyonu başarıyla gerçekleştirildi. Smooth geçişler sağlandı. Yalnızca en düşük frekanslarda fazladan bekleme oluyor. Waveformlar eklendi. - Simulinkte decelaration denenecek. - DSP kodu yazılacak, denenecek.

--- a/.gitignore
+++ b/.gitignore
@@ -858,3 +858,46 @@ Simulation/control/slprj/_jitprj/stLPesVfQ2phtalhelUdwgE.l
 Simulation/control/slprj/_jitprj/skSVTyhuSaiuumEl0G5VsBH.l
 Simulation/control/vbyfcontrolim_trials_acc.mexw64
 Simulation/control/vbyfcontrolim_trials_acc.exp
+Simulation/control/slprj/accel/vbyfcontrolim_interrupt/modelsources.txt
+Simulation/control/slprj/accel/vbyfcontrolim_interrupt/defines.txt
+Simulation/control/slprj/accel/vbyfcontrolim_interrupt/codedescriptor.dmr
+Simulation/control/slprj/_jitprj/sPNBXRQOKXKW8xqBD2r3HN.l
+Simulation/control/slprj/_jitprj/sMf6NhFMO78q3K8BvPCAUHC.l
+Simulation/control/slprj/_jitprj/sJ10L13OZgRhCLkZ6mKKYlE.l
+Simulation/control/slprj/_jitprj/sDScRnOkUYo2Vu8ykKer82D.l
+Simulation/control/slprj/_jitprj/s1nohvMTBjtCcwbNaNRZuBH.l
+Simulation/control/slprj/accel/vbyfcontrolim_interrupt/rt_defines.h
+Simulation/control/slprj/accel/vbyfcontrolim_interrupt/rtGetNaN.h
+Simulation/control/slprj/accel/vbyfcontrolim_interrupt/rtGetNaN.c
+Simulation/control/slprj/_jitprj/snGeRtzgOhsM8qoWqMCfFRH.l
+Simulation/control/slprj/_jitprj/shXwHEtD2CWLm7pybKHWnHD.l
+Simulation/control/slprj/_jitprj/shIJFKTbKI8KiTXhTS25VNG.l
+Simulation/control/slprj/_jitprj/shHSso6aadnujGOFfiCR2MC.l
+Simulation/control/slprj/_jitprj/sguv5J1hfUuHbr2Pc9TY7AC.l
+Simulation/control/slprj/_jitprj/sRdgeWkwSrAA5Lx8YeCg4dC.l
+Simulation/control/slprj/accel/vbyfcontrolim_interrupt/__cf_vbyfcontrolim_interrupt.h
+Simulation/control/slprj/_jitprj/svALKwLJs5hTaV9us6V4BzD.l
+Simulation/control/slprj/_jitprj/spH976WX61gmdei6VeEky3F.l
+Simulation/control/slprj/accel/vbyfcontrolim_interrupt/rt_nonfinite.h
+Simulation/control/slprj/accel/vbyfcontrolim_interrupt/rt_nonfinite.c
+Simulation/control/slprj/accel/vbyfcontrolim_interrupt/rt_look1d.h
+Simulation/control/slprj/accel/vbyfcontrolim_interrupt/rtGetInf.h
+Simulation/control/slprj/accel/vbyfcontrolim_interrupt/rtGetInf.c
+Simulation/control/slprj/accel/vbyfcontrolim_interrupt/multiword_types.h
+Simulation/control/slprj/accel/vbyfcontrolim_interrupt/rt_look1d.c
+Simulation/control/slprj/accel/vbyfcontrolim_interrupt/rt_look.h
+Simulation/control/slprj/accel/vbyfcontrolim_interrupt/rt_look.c
+Simulation/control/slprj/accel/vbyfcontrolim_interrupt/rtwtypes.h
+Simulation/control/slprj/accel/vbyfcontrolim_interrupt/rtw_proj.tmw
+Simulation/control/slprj/accel/vbyfcontrolim_interrupt/vbyfcontrolim_interrupt_acc.h
+Simulation/control/slprj/accel/vbyfcontrolim_interrupt/vbyfcontrolim_interrupt.bat
+Simulation/control/slprj/accel/vbyfcontrolim_interrupt/sfun.map
+Simulation/control/slprj/accel/vbyfcontrolim_interrupt/vbyfcontrolim_interrupt_acc.c
+Simulation/control/slprj/accel/vbyfcontrolim_interrupt/vbyfcontrolim_interrupt.mk
+Simulation/control/slprj/accel/vbyfcontrolim_interrupt/vbyfcontrolim_interrupt_acc_private.h
+Simulation/control/slprj/accel/vbyfcontrolim_interrupt/vbyfcontrolim_interrupt_acc.def
+Simulation/control/slprj/accel/vbyfcontrolim_interrupt/vbyfcontrolim_interrupt_ref.rsp
+Simulation/control/slprj/accel/vbyfcontrolim_interrupt/vbyfcontrolim_interrupt_acc_data.c
+Simulation/control/slprj/accel/vbyfcontrolim_interrupt/vbyfcontrolim_interrupt_acc_types.h
+Simulation/control/vbyfcontrolim_interrupt_acc.exp
+Simulation/control/vbyfcontrolim_interrupt_acc.mexw64
