Başlangıç hızı problemine bakıldı. Initial değer slip imiş, 1 girildi ve düzeldi. Deceleration kodu yazıldı ve denendi. Çalışıyor. Load torque'u motorun sürüş durumuna göre değiştirmek lazım. Frekans çok düştüğünde tersi yönde gitmeye başlıyor.

--- a/.gitignore
+++ b/.gitignore
@@ -901,3 +901,5 @@ Simulation/control/slprj/accel/vbyfcontrolim_interrupt/vbyfcontrolim_interrupt_a
 Simulation/control/slprj/accel/vbyfcontrolim_interrupt/vbyfcontrolim_interrupt_acc_types.h
 Simulation/control/vbyfcontrolim_interrupt_acc.exp
 Simulation/control/vbyfcontrolim_interrupt_acc.mexw64
+Simulation/control/slprj/_jitprj/sedtFpeL3SE2d94xLAuFykE.l
+Simulation/control/slprj/_jitprj/sKDmpdpFrmcShBqC4DE76qG.l
