--- a/.gitignore
+++ b/.gitignore
@@ -903,3 +903,31 @@ Simulation/control/vbyfcontrolim_interrupt_acc.exp
 Simulation/control/vbyfcontrolim_interrupt_acc.mexw64
 Simulation/control/slprj/_jitprj/sedtFpeL3SE2d94xLAuFykE.l
 Simulation/control/slprj/_jitprj/sKDmpdpFrmcShBqC4DE76qG.l
+Simulation/statespace/statespace_verification_sim_model_acc.mexw64
+Simulation/statespace/statespace_verification_sim_model_acc.exp
+Simulation/statespace/slprj/sim/_sharedutils/shared_file.dmr
+Simulation/statespace/slprj/accel/statespace_verification_sim_model/statespace_verification_sim_model_ref.rsp
+Simulation/statespace/slprj/accel/statespace_verification_sim_model/statespace_verification_sim_model_acc_types.h
+Simulation/statespace/slprj/accel/statespace_verification_sim_model/statespace_verification_sim_model_acc_private.h
+Simulation/statespace/slprj/accel/statespace_verification_sim_model/rtw_proj.tmw
+Simulation/statespace/slprj/accel/statespace_verification_sim_model/rtGetNaN.h
+Simulation/statespace/slprj/accel/statespace_verification_sim_model/rtGetNaN.c
+Simulation/statespace/slprj/accel/statespace_verification_sim_model/rtGetInf.h
+Simulation/statespace/slprj/accel/statespace_verification_sim_model/rtGetInf.c
+Simulation/statespace/slprj/sl_proj.tmw
+Simulation/statespace/slprj/accel/statespace_verification_sim_model/multiword_types.h
+Simulation/statespace/slprj/accel/statespace_verification_sim_model/modelsources.txt
+Simulation/statespace/slprj/accel/statespace_verification_sim_model/defines.txt
+Simulation/statespace/slprj/accel/statespace_verification_sim_model/codedescriptor.dmr
+Simulation/statespace/slprj/accel/statespace_verification_sim_model/statespace_verification_sim_model.mk
+Simulation/statespace/slprj/accel/statespace_verification_sim_model/statespace_verification_sim_model.bat
+Simulation/statespace/slprj/accel/statespace_verification_sim_model/sfun.map
+Simulation/statespace/slprj/accel/statespace_verification_sim_model/rtwtypes.h
+Simulation/statespace/slprj/accel/statespace_verification_sim_model/statespace_verification_sim_model_acc_data.c
+Simulation/statespace/slprj/accel/statespace_verification_sim_model/rt_nonfinite.h
+Simulation/statespace/slprj/accel/statespace_verification_sim_model/rt_nonfinite.c
+Simulation/statespace/slprj/accel/statespace_verification_sim_model/rt_defines.h
+Simulation/statespace/slprj/accel/statespace_verification_sim_model/__cf_statespace_verification_sim_model.h
+Simulation/statespace/slprj/accel/statespace_verification_sim_model/statespace_verification_sim_model_acc.h
+Simulation/statespace/slprj/accel/statespace_verification_sim_model/statespace_verification_sim_model_acc.def
+Simulation/statespace/slprj/accel/statespace_verification_sim_model/statespace_verification_sim_model_acc.c
