--- a/.gitignore
+++ b/.gitignore
@@ -931,3 +931,55 @@ Simulation/statespace/slprj/accel/statespace_verification_sim_model/__cf_statesp
 Simulation/statespace/slprj/accel/statespace_verification_sim_model/statespace_verification_sim_model_acc.h
 Simulation/statespace/slprj/accel/statespace_verification_sim_model/statespace_verification_sim_model_acc.def
 Simulation/statespace/slprj/accel/statespace_verification_sim_model/statespace_verification_sim_model_acc.c
+Simulation/balancing/slprj/accel/balancing_sim_model_parallel_RL_load_Rectifier_added/balancing_sim_model_parallel_RL_load_Rectifier_added.bat
+Simulation/balancing/slprj/accel/balancing_sim_model_parallel_RL_load_Rectifier_added/__cf_balancing_sim_model_parallel_RL_load_Rectifier_added.h
+Simulation/balancing/slprj/accel/balancing_sim_model_parallel_RL_load/sfun.map
+Simulation/balancing/slprj/accel/balancing_sim_model_parallel_RL_load/rtwtypes.h
+Simulation/balancing/slprj/accel/balancing_sim_model_parallel_RL_load/rtw_proj.tmw
+Simulation/balancing/slprj/accel/balancing_sim_model_parallel_RL_load/rt_nonfinite.h
+Simulation/balancing/slprj/accel/balancing_sim_model_parallel_RL_load/multiword_types.h
+Simulation/balancing/slprj/accel/balancing_sim_model_parallel_RL_load/modelsources.txt
+Simulation/balancing/slprj/accel/balancing_sim_model_parallel_RL_load/defines.txt
+Simulation/balancing/slprj/accel/balancing_sim_model_parallel_RL_load/codedescriptor.dmr
+Simulation/balancing/slprj/accel/balancing_sim_model_parallel_RL_load/balancing_sim_model_parallel_RL_load_ref.rsp
+Simulation/balancing/slprj/accel/balancing_sim_model_parallel_RL_load/balancing_sim_model_parallel_RL_load_acc_types.h
+Simulation/balancing/slprj/accel/balancing_sim_model_parallel_RL_load/balancing_sim_model_parallel_RL_load.bat
+Simulation/balancing/slprj/accel/balancing_sim_model_parallel_RL_load/__cf_balancing_sim_model_parallel_RL_load.h
+Simulation/balancing/balancing_sim_model_parallel_RL_load_acc.mexw64
+Simulation/balancing/balancing_sim_model_parallel_RL_load_acc.exp
+Simulation/balancing/balancing_sim_model_parallel_RL_load_Rectifier_added_acc.mexw64
+Simulation/balancing/balancing_sim_model_parallel_RL_load_Rectifier_added_acc.exp
+Simulation/balancing/slprj/accel/balancing_sim_model_parallel_RL_load_Rectifier_added/balancing_sim_model_parallel_RL_load_Rectifier_added_acc_private.h
+Simulation/balancing/slprj/accel/balancing_sim_model_parallel_RL_load_Rectifier_added/balancing_sim_model_parallel_RL_load_Rectifier_added_acc_data.c
+Simulation/balancing/slprj/accel/balancing_sim_model_parallel_RL_load_Rectifier_added/balancing_sim_model_parallel_RL_load_Rectifier_added_acc.h
+Simulation/balancing/slprj/accel/balancing_sim_model_parallel_RL_load_Rectifier_added/balancing_sim_model_parallel_RL_load_Rectifier_added_acc.def
+Simulation/balancing/slprj/accel/balancing_sim_model_parallel_RL_load_Rectifier_added/balancing_sim_model_parallel_RL_load_Rectifier_added_acc.c
+Simulation/balancing/slprj/accel/balancing_sim_model_parallel_RL_load_Rectifier_added/balancing_sim_model_parallel_RL_load_Rectifier_added.mk
+Simulation/balancing/slprj/accel/balancing_sim_model_parallel_RL_load/rt_nonfinite.c
+Simulation/balancing/slprj/accel/balancing_sim_model_parallel_RL_load/rt_defines.h
+Simulation/balancing/slprj/accel/balancing_sim_model_parallel_RL_load/rtGetNaN.h
+Simulation/balancing/slprj/accel/balancing_sim_model_parallel_RL_load/rtGetNaN.c
+Simulation/balancing/slprj/accel/balancing_sim_model_parallel_RL_load/rtGetInf.h
+Simulation/balancing/slprj/accel/balancing_sim_model_parallel_RL_load/rtGetInf.c
+Simulation/balancing/slprj/accel/balancing_sim_model_parallel_RL_load/balancing_sim_model_parallel_RL_load_acc_private.h
+Simulation/balancing/slprj/accel/balancing_sim_model_parallel_RL_load/balancing_sim_model_parallel_RL_load_acc_data.c
+Simulation/balancing/slprj/accel/balancing_sim_model_parallel_RL_load/balancing_sim_model_parallel_RL_load_acc.h
+Simulation/balancing/slprj/accel/balancing_sim_model_parallel_RL_load/balancing_sim_model_parallel_RL_load_acc.def
+Simulation/balancing/slprj/accel/balancing_sim_model_parallel_RL_load/balancing_sim_model_parallel_RL_load_acc.c
+Simulation/balancing/slprj/accel/balancing_sim_model_parallel_RL_load/balancing_sim_model_parallel_RL_load.mk
+Simulation/balancing/slprj/accel/balancing_sim_model_parallel_RL_load_Rectifier_added/sfun.map
+Simulation/balancing/slprj/accel/balancing_sim_model_parallel_RL_load_Rectifier_added/rtwtypes.h
+Simulation/balancing/slprj/accel/balancing_sim_model_parallel_RL_load_Rectifier_added/rtw_proj.tmw
+Simulation/balancing/slprj/accel/balancing_sim_model_parallel_RL_load_Rectifier_added/rt_nonfinite.h
+Simulation/balancing/slprj/accel/balancing_sim_model_parallel_RL_load_Rectifier_added/modelsources.txt
+Simulation/balancing/slprj/accel/balancing_sim_model_parallel_RL_load_Rectifier_added/defines.txt
+Simulation/balancing/slprj/accel/balancing_sim_model_parallel_RL_load_Rectifier_added/balancing_sim_model_parallel_RL_load_Rectifier_added_acc_types.h
+Simulation/balancing/slprj/accel/balancing_sim_model_parallel_RL_load_Rectifier_added/rt_nonfinite.c
+Simulation/balancing/slprj/accel/balancing_sim_model_parallel_RL_load_Rectifier_added/rt_defines.h
+Simulation/balancing/slprj/accel/balancing_sim_model_parallel_RL_load_Rectifier_added/rtGetNaN.h
+Simulation/balancing/slprj/accel/balancing_sim_model_parallel_RL_load_Rectifier_added/multiword_types.h
+Simulation/balancing/slprj/accel/balancing_sim_model_parallel_RL_load_Rectifier_added/balancing_sim_model_parallel_RL_load_Rectifier_added_ref.rsp
+Simulation/balancing/slprj/accel/balancing_sim_model_parallel_RL_load_Rectifier_added/rtGetInf.h
+Simulation/balancing/slprj/accel/balancing_sim_model_parallel_RL_load_Rectifier_added/rtGetInf.c
+Simulation/balancing/slprj/accel/balancing_sim_model_parallel_RL_load_Rectifier_added/codedescriptor.dmr
+Simulation/balancing/slprj/accel/balancing_sim_model_parallel_RL_load_Rectifier_added/rtGetNaN.c
