300 Hz eliminasyonu üzerine kafa yoruldu, simülasyon yapıldı. Rectifier içeren simülasyon dosyasını biraz hor kullandım :) @tokgozfurkan, ama orjinal şeyler commentli olarak duruyor içinde. Konu ilginç yerlere gitti, vakit bulduğumda raporlayacağım.

--- a/.gitignore
+++ b/.gitignore
@@ -983,3 +983,29 @@ Simulation/balancing/slprj/accel/balancing_sim_model_parallel_RL_load_Rectifier_
 Simulation/balancing/slprj/accel/balancing_sim_model_parallel_RL_load_Rectifier_added/rtGetInf.c
 Simulation/balancing/slprj/accel/balancing_sim_model_parallel_RL_load_Rectifier_added/codedescriptor.dmr
 Simulation/balancing/slprj/accel/balancing_sim_model_parallel_RL_load_Rectifier_added/rtGetNaN.c
+Simulation/slprj/accel/Rectifier_sim_model/rtGetInf.c
+Simulation/slprj/accel/Rectifier_sim_model/multiword_types.h
+Simulation/slprj/accel/Rectifier_sim_model/modelsources.txt
+Simulation/slprj/accel/Rectifier_sim_model/defines.txt
+Simulation/slprj/accel/Rectifier_sim_model/codedescriptor.dmr
+Simulation/slprj/accel/Rectifier_sim_model/Rectifier_sim_model_ref.rsp
+Simulation/slprj/accel/Rectifier_sim_model/Rectifier_sim_model_acc_types.h
+Simulation/slprj/accel/Rectifier_sim_model/Rectifier_sim_model_acc_data.c
+Simulation/slprj/accel/Rectifier_sim_model/Rectifier_sim_model_acc.h
+Simulation/slprj/accel/Rectifier_sim_model/Rectifier_sim_model_acc.def
+Simulation/slprj/accel/Rectifier_sim_model/Rectifier_sim_model_acc.c
+Simulation/slprj/accel/Rectifier_sim_model/Rectifier_sim_model.mk
+Simulation/slprj/accel/Rectifier_sim_model/Rectifier_sim_model.bat
+Simulation/slprj/accel/Rectifier_sim_model/sfun.map
+Simulation/slprj/accel/Rectifier_sim_model/rtwtypes.h
+Simulation/slprj/accel/Rectifier_sim_model/rtw_proj.tmw
+Simulation/slprj/accel/Rectifier_sim_model/rtGetNaN.c
+Simulation/slprj/accel/Rectifier_sim_model/rtGetInf.h
+Simulation/slprj/accel/Rectifier_sim_model/Rectifier_sim_model_acc_private.h
+Simulation/slprj/accel/Rectifier_sim_model/rt_nonfinite.h
+Simulation/slprj/accel/Rectifier_sim_model/rt_nonfinite.c
+Simulation/slprj/accel/Rectifier_sim_model/rt_defines.h
+Simulation/slprj/accel/Rectifier_sim_model/rtGetNaN.h
+Simulation/slprj/accel/Rectifier_sim_model/__cf_Rectifier_sim_model.h
+Simulation/Rectifier_sim_model_acc.mexw64
+Simulation/Rectifier_sim_model_acc.exp
