@EnesAyaz ile birlikte uzun bir çalışma gerçekleştirildi. İnterleavingin doğasını anlamaya yönelik simülasyonlar yapıldı. Ayrıca 300Hz elimination üzerine kafa yoruldu ve simülasyon yapıldı. Çalışmalar şu ana kadar fail etmiş gözükse de daha yolumuz uzun.

--- a/.gitignore
+++ b/.gitignore
@@ -1009,3 +1009,29 @@ Simulation/slprj/accel/Rectifier_sim_model/rtGetNaN.h
 Simulation/slprj/accel/Rectifier_sim_model/__cf_Rectifier_sim_model.h
 Simulation/Rectifier_sim_model_acc.mexw64
 Simulation/Rectifier_sim_model_acc.exp
+Simulation/slprj/accel/interleaving_precircuit/sfun.map
+Simulation/slprj/accel/interleaving_precircuit/rtwtypes.h
+Simulation/slprj/accel/interleaving_precircuit/rtw_proj.tmw
+Simulation/slprj/accel/interleaving_precircuit/interleaving_precircuit_acc_data.c
+Simulation/slprj/accel/interleaving_precircuit/interleaving_precircuit.mk
+Simulation/slprj/accel/interleaving_precircuit/interleaving_precircuit.bat
+Simulation/slprj/accel/interleaving_precircuit/defines.txt
+Simulation/slprj/accel/interleaving_precircuit/codedescriptor.dmr
+Simulation/slprj/accel/interleaving_precircuit/rt_nonfinite.h
+Simulation/slprj/accel/interleaving_precircuit/rt_nonfinite.c
+Simulation/slprj/accel/interleaving_precircuit/rt_defines.h
+Simulation/slprj/accel/interleaving_precircuit/rtGetNaN.h
+Simulation/slprj/accel/interleaving_precircuit/rtGetNaN.c
+Simulation/slprj/accel/interleaving_precircuit/rtGetInf.h
+Simulation/slprj/accel/interleaving_precircuit/rtGetInf.c
+Simulation/slprj/accel/interleaving_precircuit/multiword_types.h
+Simulation/slprj/accel/interleaving_precircuit/__cf_interleaving_precircuit.h
+Simulation/slprj/accel/interleaving_precircuit/modelsources.txt
+Simulation/slprj/accel/interleaving_precircuit/interleaving_precircuit_acc.h
+Simulation/slprj/accel/interleaving_precircuit/interleaving_precircuit_acc.def
+Simulation/slprj/accel/interleaving_precircuit/interleaving_precircuit_acc.c
+Simulation/slprj/accel/interleaving_precircuit/interleaving_precircuit_ref.rsp
+Simulation/slprj/accel/interleaving_precircuit/interleaving_precircuit_acc_types.h
+Simulation/slprj/accel/interleaving_precircuit/interleaving_precircuit_acc_private.h
+Simulation/interleaving_precircuit_acc.mexw64
+Simulation/interleaving_precircuit_acc.exp
