IMMD modeli ile ilgili çalışmalar en basit modelden başlayarak toparlanıyor. Şimdilik sadece ilk model açıklandı ve sonuçlar eklendi. Devamı gelecek.

--- a/.gitignore
+++ b/.gitignore
@@ -1035,3 +1035,31 @@ Simulation/slprj/accel/interleaving_precircuit/interleaving_precircuit_acc_types
 Simulation/slprj/accel/interleaving_precircuit/interleaving_precircuit_acc_private.h
 Simulation/interleaving_precircuit_acc.mexw64
 Simulation/interleaving_precircuit_acc.exp
+Simulation/dcbusmodelwrapup/slprj/accel/Single_noparasitics_balanced_infinitebus/rtGetNaN.c
+Simulation/dcbusmodelwrapup/slprj/accel/Single_noparasitics_balanced_infinitebus/rtGetInf.h
+Simulation/dcbusmodelwrapup/slprj/accel/Single_noparasitics_balanced_infinitebus/rtGetInf.c
+Simulation/dcbusmodelwrapup/slprj/accel/Single_noparasitics_balanced_infinitebus/multiword_types.h
+Simulation/dcbusmodelwrapup/slprj/accel/Single_noparasitics_balanced_infinitebus/Single_noparasitics_balanced_infinitebus_ref.rsp
+Simulation/dcbusmodelwrapup/slprj/accel/Single_noparasitics_balanced_infinitebus/Single_noparasitics_balanced_infinitebus.bat
+Simulation/dcbusmodelwrapup/Single_noparasitics_balanced_infinitebus_acc.mexw64
+Simulation/dcbusmodelwrapup/slprj/sl_proj.tmw
+Simulation/dcbusmodelwrapup/slprj/accel/Single_noparasitics_balanced_infinitebus/modelsources.txt
+Simulation/dcbusmodelwrapup/slprj/accel/Single_noparasitics_balanced_infinitebus/defines.txt
+Simulation/dcbusmodelwrapup/slprj/accel/Single_noparasitics_balanced_infinitebus/codedescriptor.dmr
+Simulation/dcbusmodelwrapup/slprj/accel/Single_noparasitics_balanced_infinitebus/__cf_Single_noparasitics_balanced_infinitebus.h
+Simulation/dcbusmodelwrapup/slprj/accel/Single_noparasitics_balanced_infinitebus/Single_noparasitics_balanced_infinitebus_acc.h
+Simulation/dcbusmodelwrapup/slprj/accel/Single_noparasitics_balanced_infinitebus/Single_noparasitics_balanced_infinitebus_acc.def
+Simulation/dcbusmodelwrapup/slprj/accel/Single_noparasitics_balanced_infinitebus/Single_noparasitics_balanced_infinitebus_acc.c
+Simulation/dcbusmodelwrapup/slprj/accel/Single_noparasitics_balanced_infinitebus/Single_noparasitics_balanced_infinitebus.mk
+Simulation/dcbusmodelwrapup/slprj/sim/_sharedutils/shared_file.dmr
+Simulation/dcbusmodelwrapup/slprj/accel/Single_noparasitics_balanced_infinitebus/sfun.map
+Simulation/dcbusmodelwrapup/slprj/accel/Single_noparasitics_balanced_infinitebus/rtwtypes.h
+Simulation/dcbusmodelwrapup/slprj/accel/Single_noparasitics_balanced_infinitebus/rtw_proj.tmw
+Simulation/dcbusmodelwrapup/slprj/accel/Single_noparasitics_balanced_infinitebus/Single_noparasitics_balanced_infinitebus_acc_types.h
+Simulation/dcbusmodelwrapup/slprj/accel/Single_noparasitics_balanced_infinitebus/Single_noparasitics_balanced_infinitebus_acc_private.h
+Simulation/dcbusmodelwrapup/slprj/accel/Single_noparasitics_balanced_infinitebus/Single_noparasitics_balanced_infinitebus_acc_data.c
+Simulation/dcbusmodelwrapup/slprj/accel/Single_noparasitics_balanced_infinitebus/rt_nonfinite.h
+Simulation/dcbusmodelwrapup/slprj/accel/Single_noparasitics_balanced_infinitebus/rt_nonfinite.c
+Simulation/dcbusmodelwrapup/slprj/accel/Single_noparasitics_balanced_infinitebus/rt_defines.h
+Simulation/dcbusmodelwrapup/slprj/accel/Single_noparasitics_balanced_infinitebus/rtGetNaN.h
+Simulation/dcbusmodelwrapup/Single_noparasitics_balanced_infinitebus_acc.exp
