Unbalance yöntemi (sixthharmonicstudies_another) ile 300 Hz azaltma çalışıyor. 150 Hz injection (Rectifier_sim_model) ile çalışmıyor. Bakılacak. @tokgozfurkan

--- a/.gitignore
+++ b/.gitignore
@@ -1092,3 +1092,29 @@ Simulation/sc/slprj/accel/shortcircuitcircuit/rt_defines.h
 Simulation/sc/slprj/accel/shortcircuitcircuit/rtGetNaN.h
 Simulation/sc/shortcircuitcircuit_acc.exp
 Simulation/dcbusmodelwrapup/~$immd_dcbusmodelwrapup.pptx
+Simulation/balancing/slprj/accel/sixthharmonicstudies_another/sixthharmonicstudies_another_acc_data.c
+Simulation/balancing/slprj/accel/sixthharmonicstudies_another/sfun.map
+Simulation/balancing/slprj/accel/sixthharmonicstudies_another/rtwtypes.h
+Simulation/balancing/slprj/accel/sixthharmonicstudies_another/rtw_proj.tmw
+Simulation/balancing/slprj/accel/sixthharmonicstudies_another/rtGetNaN.h
+Simulation/balancing/slprj/accel/sixthharmonicstudies_another/rtGetNaN.c
+Simulation/balancing/slprj/accel/sixthharmonicstudies_another/rtGetInf.h
+Simulation/balancing/slprj/accel/sixthharmonicstudies_another/defines.txt
+Simulation/balancing/slprj/accel/sixthharmonicstudies_another/codedescriptor.dmr
+Simulation/balancing/slprj/accel/sixthharmonicstudies_another/__cf_sixthharmonicstudies_another.h
+Simulation/balancing/sixthharmonicstudies_another_acc.mexw64
+Simulation/balancing/sixthharmonicstudies_another_acc.exp
+Simulation/balancing/slprj/accel/sixthharmonicstudies_another/sixthharmonicstudies_another_acc.c
+Simulation/balancing/slprj/accel/sixthharmonicstudies_another/sixthharmonicstudies_another.mk
+Simulation/balancing/slprj/accel/sixthharmonicstudies_another/sixthharmonicstudies_another.bat
+Simulation/balancing/slprj/accel/sixthharmonicstudies_another/rt_nonfinite.h
+Simulation/balancing/slprj/accel/sixthharmonicstudies_another/rt_nonfinite.c
+Simulation/balancing/slprj/accel/sixthharmonicstudies_another/rt_defines.h
+Simulation/balancing/slprj/accel/sixthharmonicstudies_another/rtGetInf.c
+Simulation/balancing/slprj/accel/sixthharmonicstudies_another/multiword_types.h
+Simulation/balancing/slprj/accel/sixthharmonicstudies_another/modelsources.txt
+Simulation/balancing/slprj/accel/sixthharmonicstudies_another/sixthharmonicstudies_another_acc_types.h
+Simulation/balancing/slprj/accel/sixthharmonicstudies_another/sixthharmonicstudies_another_acc_private.h
+Simulation/balancing/slprj/accel/sixthharmonicstudies_another/sixthharmonicstudies_another_acc.def
+Simulation/balancing/slprj/accel/sixthharmonicstudies_another/sixthharmonicstudies_another_ref.rsp
+Simulation/balancing/slprj/accel/sixthharmonicstudies_another/sixthharmonicstudies_another_acc.h
